proj2/test/test_11712009_4.out
Error type 2 at Line 2: Function not found.
Error type 5 at Line 2: Two sides of assignment have inconsistent type.
Error type 3 at Line 3: Variable Redefinition.
