proj2/test/test_11712009_4.spl
int main(int a, int b) {
    int f = a(b);
    int f = 1;
}